# MolecularNodes

./: .gitignore  .gitmodules  .nojekyll  .pre-commit-config.yaml  AI_POLICY.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LICENSE.OLD  MANIFEST.in  Makefile  README.md  README_style_generator.md  __init__.py  _quarto.yml  api_introduction.html  assembly.py  attributes.html  build.py  cellpack  cellpack.py  data.py  data_table.html  documentation.html  documentation.qmd  download_urls.json  example_animations.html  example_listings.html  examples.html  examples.qmd  extract_log.py  find_bonds  generate_style_docs.py  generated_style_classes.py  getting-started.html  getting-started.qmd  globals.py  index.html  index.qmd  (+28 more)
.Rproj.user/D8C868F8/: rmd-outputs
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  benchmarks.yml  build.yml  ci.yml  docs.yml  lint.yml  local.yml  mypy.yml  pypi.yml  qurto-publish.yml  release.yml  releases.yml  render-tests.yml  run-tests.yml  ssh.yml  test-addon.yml  test-daily.yml  tests.yml  upload.yml
MolecularNodes/: MANIFEST.in  __init__.py  assembly.py  bcif.py  cellpack.py  coll.py  color.py  config.json  data.py  decode.py  density.py  esmfold.py  globals.py  load.py  map.py  md.py  md_mod.py  mda.py  nodes.py  obj.py  pack.py  pkg.py  pref.py  render.py  requirements.txt  solv_ana.py  star.py  starfile.py  tools.py  ui.py  utils.py
MolecularNodes/assembly/: __init__.py  cif.py  mesh.py  mmtf.py  pdb.py
MolecularNodes/assets/: blender_assets.cats.txt
VideoDecodeStats/: LOG
_site/: search.json
api/: annotations.html  blender.html  canvas.html  density.html  download.download.html  entities.Ensemble.html  entities.MolecularEntity.html  entities.Molecule.html  entities.OXDNA.html  entities.Trajectory.html  fetch.html  index.html  materials.html  parse.html  styles.html
api/reference/: Canvas.html  Molecule.html  MoleculeSelector.html  StyleBallAndStick.html  StyleCartoon.html  StyleRibbon.html  StyleSpheres.html  StyleSticks.html  StyleSurface.html  Trajectory.html  Trajectory.selections.html  annotations.base.html  annotations.interface.html  annotations.manager.html  entities.Ensemble.html  entities.Molecule.html  entities.MoleculeSelector.html  entities.OXDNA.html  entities.StreamingTrajectory.html  entities.Trajectory.html  entities.density.annotations.html  entities.molecule.annotations.html  entities.trajectory.DSSPManager.html  entities.trajectory.SelectionManager.html  entities.trajectory.annotations.html  entities.trajectory.selections.Selection.html  entities.trajectory.selections.SelectionManager.html  entities.trajectory.selections.html  index.html  (+7 more)
assets/: node_append_file.blend  node_append_file_new.blend
citations/: index.html
cite/: index.html
docs/: .gitignore  API_SUMMARY.md  GENERATOR_STATUS.md  PROJECT_STATUS.md  _quarto.yml  _sidebar.yml  about.html  api_introduction.qmd  attributes.qmd  build_node_docs.py  current_api_reference.md  custom-dark.scss  custom-light.s.css  custom-light.scss  data_table.qmd  docs.py  documentation.html  documentation.md  documentation.qmd  example_animations.qmd  example_listings.qmd  examples.html  examples.md  examples.qmd  filters.lua  generate.py  getting-started.html  getting-started.md  getting-started.qmd  implementation_summary.md  index.html  index.md  index.qmd  install.py  installation.html  installation.md  installation.qmd  interactive.ipynb  interface_api_final.md  interface_api_proposals.md  (+20 more)
documentation/: .documentation.md.swp  .gitignore  _quarto.yml  changelog.md  documentation.md  getting-started.md  installation.md  nodes.md  sitemap.xml
examples/: index.html
img/: banner.blend
molecularnodes/: CONTRIBUTING.md  __init__.py  addon.py  auto_load.py  bcif.py  blender_manifest.toml  bones.py  coll.py  color.py  data.py  decode.py  dna.py  download.py  handlers.py  load.py  logger.py  md.py  mda.py  nodes.py  obj.py  pack.py  pkg.py  pref.py  props.py  render.py  requirements.txt  session.py  star.py  stash.py  template.py  test_dna.py  types.py  ui.py  utils.py  warping.py
nodes/: DNA.html  animate.html  assembly.html  attributes.html  bonds.html  cellpack.html  color.html  curves.html  density.html  ensemble.html  fields.html  geometry.html  index.html  select.html  simulation.html  style.html  topology.html  utils.html
reference/: assembly.html  coll.html  data.html  density.html  esmfold.html  index.html  load.html  md.html  mda.html  nodes.html  obj.html  pkg.html  star.html  ui.html
scripts/: load_pytest.py  test_addon.py
src/: CustomNodes.py  add_and_create_ndoe.py  assembly.py  blender_interface_utility_functions.py  check_mda_import.py  check_mda_installed.py  create_custom_node_group.py  dict.py  dna_sequences  find_bonds  frames_to_instances.py  import_structure.py  install_packages.py  lipophilic_residues.py  md.py  mda_test.py  nodes.py  open.py  packages.py  panel.py  setup_node_treepy.py  space_groups  test_assembly_extraction.py  test_if_node_exist.py  tools.py  transformation_matrix_node.py
tests/: conftest.py  constants.py  emdb_pooch.py  install.py  python.py  run.py  sanity.py  test_01_version.py  test_add_style.py  test_annotations.py  test_assembly.py  test_attributes.py  test_canvas.py  test_cellpack.py  test_coll.py  test_color.py  test_converters.py  test_density.py  test_density_emdb_api.py  test_density_mrc_fallback.py  test_dna.py  test_download.py  test_geometry_set.py  test_import_methods.py  test_load.py  test_load_biotite.py  test_material.py  test_mda.py  test_menu.py  test_mol_sdf.py  test_mol_select.py  test_node_builder.py  test_nodes.py  test_nodes_geometry.py  test_obj.py  test_ops.py  test_parse.py  test_pdbx.py  test_pkg.py  test_presets.py  (+15 more)
tutorials/: 00_interface.html  01_importing.html  02_selections.html  03_molecular_dynamics.html  04_cryoem.html  cryoem.html  importing.html  index.html  installation.html  interface.html  selections.html  simulation.html  streaming-trajectories.html  trajectories.html
(+2232 files in other folders)
