[project]
name = "molecularnodes"
version = "4.4.0"
description = "Toolbox for molecular animations using Geometry Nodes"
readme = "README.md"
dependencies = [
    "databpy>=0.0.18",
    "MDAnalysis>=2.7.0",
    "biotite>=1.1",
    "mrcfile",
    "starfile",
]
maintainers = [{ name = "Brady Johnston", email = "brady.johnston@me.com" }]
requires-python = "~=3.11"
license = {text = "GPL-3.0"}


[project.urls]
Homepage = "https://bradyajohnston.github.io/MolecularNodes"
Repository = "https://github.com/bradyajohnston/MolecularNodes"
Documentation = "https://bradyajohnston.github.io/MolecularNodes"

[project.optional-dependencies]
bpy = ["bpy>=4.4"]
jupyter = ["jupyter", "IPython"]
dev = ["pytest", "pytest-cov", "syrupy", "scipy", "fake-bpy-module", "IPython", "blext"]
test = ["pytest", "pytest-cov", "syrupy", "scipy", "IPython", "pytest-xdist"]
docs = [
    "quartodoc",
    "tomlkit",
    "nodepad",
    "jupyter",
    "IPython",
    "jupyter-cache",
]
blender4_4 = [
    "autopep8==2.3.1", # # ⭳⭳⭳ MANAGED BY BLEXT ⭳⭳⭳
    "certifi==2021.10.8",
    "charset_normalizer==2.0.10",
    "cython==3.0.11",
    "idna==3.3",
    "numpy==1.26.4",
    "pip==24.0",
    "pycodestyle==2.12.1",
    "requests==2.27.1",
    "setuptools==63.2.0",
    "urllib3==1.26.8",
    "zstandard==0.16.0", # # ⭱⭱⭱ MANAGED BY BLEXT ⭱⭱⭱
]



[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]


[tool.setuptools]
include-package-data = true
packages = ["molecularnodes"]

[tool.setuptools.package-data]
molecularnodes = ["assets/*", "assets/template/*", "**/*.py"]


[tool.ruff.lint]
# pyflakes, pycodestyle isort and varibale naming
select = ["F", "E", "W", "I", "TID", "N"]
ignore = [
    # In docstrings long lines are often intentional
    # Most other ocassions are caught by the ruff formatter
    "E501",
    # Due to constants and class placeholders defined in functions
    "N806",
    # 'molecularnodes' when used as a Blender extension may not actually be named
    # 'molecularnodes' (potentially user_default.molecularnodes for example) so we have to
    # use relative imports:
    # https://docs.blender.org/manual/en/latest/advanced/extensions/addons.html#extensions-and-namespace
    "TID252", # Prefer absolute imports over relative imports from parent modules
    "N813",   # Camelcase `MDAnalysis` imported as lowercase `mda`
    "N801",   # Class name `MN_UL_TrajectorySelectionListUI` should use CapWords convention
]

[tool.ruff.lint.isort]
# No separator lines between import sections
no-lines-before = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
order-by-type = true


[tool.ruff.lint.per-file-ignores]
# # Ambiguous variable name: `l`
"molecularnodes/color.py" = ["E741"]

[tool.ruff.format]
exclude = ["molecularnodes/assets/data.py"]


[tool.blext]
pretty_name = "MolecularNodes"
blender_version_min = '4.4.0'
blender_version_max = '4.5.0'
bl_tags = ["Development"]
copyright = ["2024 blext Contributors"]
supported_platforms = [
   'windows-x64',
   'macos-arm64',
   'linux-x64',
]
min_macos_version = [12, 0]

[tool.uv]
package = false
sources = {blext = { git = "https://codeberg.org/so-rose/blext" }}
